--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,3 +1,28 @@
-
 @import 'reset';
 
+$black:#000000;
+
+body{
+
+        
+    header{
+
+
+    }
+
+    .container{
+        
+        display: flex;
+        flex-wrap: wrap;
+
+
+        .card{
+
+            border: 1px $black;
+        }
+    }
+
+
+
+
+}
