--- a/assets/style.scss
+++ b/assets/style.scss
@@ -4,25 +4,68 @@ $black:#000000;
 
 body{
 
-        
+    width: 100%;
+    max-width: 1520px;
+    height: 100%;
+
     header{
-
-
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: 5%;
     }
 
     .container{
-        
         display: flex;
         flex-wrap: wrap;
-
-
+        justify-content: center;
+        gap:20px;
+        margin-top: 5%;
+    
         .card{
 
-            border: 1px $black;
+            border: 1px solid $black;
+            .card__div{
+
+                .card__div__image{
+                  
+                }
+
+            }
+
+            .card__text{
+                        
+                text-align: center;
+
+                .card__text__nom{
+
+                }
+
+                .card__text__natio{
+
+                }
+
+                .card__text__birth{
+
+                }
+
+                .card__text__poste{
+
+                }
+
+                .card__text__taille{
+
+                }
+
+                .card__text__poids{
+
+                }
+
+                .card__text__paragraph{
+
+                }
+            }
         }
     }
-
-
-
 
 }
