--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,9 +1,18 @@
 @import 'reset';
 
+@font-face {
+    font-family: 'Merriweather-Light';
+    src: url('Merriweather-Light.ttf');
+}
+
 $black:#000000;
+$yellow:#d0d92c;
+$dark-blue:#203099;
 
 body{
 
+    font-family: 'Merriweather-Light';
+    color: $yellow;
     width: 100%;
     max-width: 1520px;
     height: 100%;
@@ -13,6 +22,15 @@ body{
         justify-content: center;
         width: 100%;
         margin-top: 5%;
+
+        .logo{
+            width: 5%;
+        }
+
+        h1{
+            width: 50%;
+            text-align: center;
+        }
     }
 
     .container{
@@ -21,48 +39,63 @@ body{
         justify-content: center;
         gap:20px;
         margin-top: 5%;
+        margin-bottom: 5%;
     
         .card{
-
+            display: flex;
+            flex-direction: column;
+            background-color:$dark-blue;
             border: 1px solid $black;
-            .card__div{
+            transition: box-shadow 0.3s, transform 0.3s;
 
-                .card__div__image{
-                  
-                }
-
+            &:hover{
+            
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+                transform: scale(1.1);
             }
 
-            .card__text{
-                        
+            &__div{
+
+                &__image{
+                    width: 100%;
+                }
+            }
+            &__text{
+                padding: 5%;
                 text-align: center;
 
-                .card__text__nom{
+                &__div{
+                    display: flex;
+                    padding-bottom: 5%;
 
+                    &__nom{
+                        padding-bottom: 5%;
+                        width: 100%;
+                    }
+
+                    &__natio{
+                        width: 15%;
+                    }
                 }
 
-                .card__text__natio{
-
+                &__birth{
+                    padding-bottom: 5%;
                 }
 
-                .card__text__birth{
-
+                &__poste{
+                    padding-bottom: 5%;
                 }
 
-                .card__text__poste{
-
+                &__taille{
+                    padding-bottom: 5%;
                 }
 
-                .card__text__taille{
-
+                &__poids{
+                    padding-bottom: 5%;
                 }
 
-                .card__text__poids{
-
-                }
-
-                .card__text__paragraph{
-
+                &__paragraph{
+                    font-size: 12px;
                 }
             }
         }
