--- a/assets/style.scss
+++ b/assets/style.scss
@@ -98,6 +98,9 @@ body{
 
                 &__birth{
                     padding-bottom: 5%;
+                    width: 91%;
+                    border-top: 1px solid;
+                    padding: 5%;
                 }
 
                 &__poste{
