--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,6 @@ body {
   font-family: "Merriweather-Light";
   color: #d0d92c;
   width: 100%;
-  max-width: 1520px;
   height: 100%;
 }
 body header {
@@ -78,6 +77,11 @@ body header h1 {
   width: 50%;
   text-align: center;
 }
+@media (max-width: 475px) {
+  body header h1 {
+    display: none;
+  }
+}
 body .container {
   display: flex;
   flex-wrap: wrap;
@@ -85,6 +89,11 @@ body .container {
   gap: 20px;
   margin-top: 5%;
   margin-bottom: 5%;
+}
+@media (max-width: 475px) {
+  body .container {
+    margin-bottom: 30%;
+  }
 }
 body .container #Button_Alpha {
   border: 1px solid #000000;
