--- a/assets/style.scss
+++ b/assets/style.scss
@@ -21,7 +21,7 @@ body{
     font-family: 'Merriweather-Light';
     color: $yellow;
     width: 100%;
-    max-width: 1520px;
+    
     height: 100%;
 
     header{
@@ -42,6 +42,10 @@ body{
         h1{
             width: 50%;
             text-align: center;
+
+            @include media-minwidth($mobile){
+                display: none;
+            }
         }
     }
 
@@ -52,6 +56,10 @@ body{
         gap:20px;
         margin-top: 5%;
         margin-bottom: 5%;
+
+        @include media-minwidth($mobile){
+            margin-bottom: 30%;
+        }
 
         #Button_Alpha{
             border: 1px solid $black;
